Fix styling of background-cover and adjust z-index of canvas
Edit background-cover position from 'absolute' to 'fixed' to fix issue of not reaching bottom of viewport. Edit canvas z-index during confetti animation to ensure confetti is in front of todo list.

--- a/src/main.css
+++ b/src/main.css
@@ -19,7 +19,7 @@
 }
 
 .background-cover {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
